# opencv_yuv_rgb_example

./: CMakeLists.txt  main.cpp  main.h
cmodel_test/: 使用说明.txt
cmodel_test/include/: Base.h  CmdList.h  Dvpp.h  ExportMacro.h  Jpeg.h  Png.h  Vdec.h  Venc.h  Vpc.h  dvpp_config.h  export_macro.h  icmdlistapi.h  idvppapi.h  idvppcapability.h  ijpegdapi.h  ijpegeapi.h  ivdecapi.h  ivencapi.h  ivpcapi.h  vdec_hiai.h
cmodel_test/test_file/: 552x618.yuv420planner
cmodel_test/test_file/result/: 224x224.bgr  224x224.rgb
